fixed header align

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,6 +8,7 @@ body {
     flex-direction: column;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .vignette {
@@ -25,6 +26,7 @@ body {
     flex-direction: column;
     gap: 2em;
     justify-content: center;
+    max-width: fit-content;
 }
 
 main {
@@ -60,7 +62,6 @@ main {
 header {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     gap: 5em;
 }
